# vlc_demo

./: README.md
Linux/: CMakeLists.txt
Linux/include/vlc/: libvlc_version.h
Linux/lib/: libvlc.so.5.6.0
Linux/src/: libvlc_test.cpp  vlc_reader.cpp  vlc_reader.h
